refactoring the code for mobile and tablet

--- a/code/index.html
+++ b/code/index.html
@@ -5,30 +5,16 @@
     <title>The ClickBait: &#128240</title>
     <link rel="stylesheet" href="./style.css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-    <header class="" id="top">
-
-      <figure class="">
-        <img src="../img/logo.svg" alt="" class="">
-      </figure>
-
-      <section class="">
-        <a href="http://" target="_blank" rel="noopener noreferrer" class="exclude">Link 1</a>
-        <a href="http://" target="_blank" rel="noopener noreferrer" class="exclude">Link 2</a>
-        <a href="http://" target="_blank" rel="noopener noreferrer" class="exclude">Link 3</a>
-        <a href="http://" target="_blank" rel="noopener noreferrer" class="exclude">Link 4</a>
-      </section>
-      <!-- Some kind of logo and navbar -->
-
-    </header>
+    
 
     <section class="flex-container">
       <!-- The big news content -->
-      <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" target="_blank" rel="noopener noreferrer">
-        <article class="large-card">
-          <img src="../img/DT_2020_CROPPED.jpg" alt="">
+      <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" class="large-card" target="_blank" rel="noopener noreferrer">
+        <article>
+          <img src="../img/" alt="">
           <h3 class="large-h3 class="small-h3"">Breaking News!</h3>
             <p class="large-text">Donalt Trump re-elected! <br>
           See his opening speach right hear
@@ -39,67 +25,67 @@
 
 
 
-    <section class="flex-container-small flex-container-medium">
+    <section class="flex-container-small flex-container-medium clearfix">
       <!-- The other news  -->
-      <a href="http://" target="_blank" rel="noopener noreferrer">
-        <article class="small-card">
-          <img src="../img/RM.jpeg" alt="">
+      <a href="http://" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
+        <article>
+          <img src="../img/" alt="">
           <h3 class="small-h3">You decide</h3>
           <p class="small-text">Family guy or simpsons? </p>
         </article>
       </a>
 
-      <a href="http://" target="_blank" rel="noopener noreferrer">
-        <article class="small-card">
-          <img src="../img/ernst.jpg" alt="">
+      <a href="http://" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
+        <article>
+          <img src="../img/" alt="">
           <h3 class="small-h3">Read it all!</h3>
           <p class="small-text">Ernst best wedding tips! </p>
         </article>
       </a>
 
-      <a href="http://" target="_blank" rel="noopener noreferrer">
-        <article class="small-card">
-          <img src="../img/DT_2020.jpg" alt="">
+      <a href="http://" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
+        <article>
+          <img src="../img/" alt="">
           <h3 class="small-h3">Breaking News!</h3>
           <p class="small-text">Donalt Trump re-elected! </p>
         </article>
       </a>
 
-      <a href="http://" target="_blank" rel="noopener noreferrer">
-        <article class="small-card">
-          <img src="../img/DT_2020.jpg" alt="">
+      <a href="http://" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
+        <article>
+          <img src="../img/" alt="">
           <h3 class="small-h3">Breaking News!</h3>
           <p class="small-text">Donalt Trump re-elected! </p>
         </article>
       </a>
 
-      <a href="http://" target="_blank" rel="noopener noreferrer">
-        <article class="small-card">
-          <img src="../img/DT_2020.jpg" alt="">
+      <a href="http://" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
+        <article>
+          <img src="../img/" alt="">
           <h3 class="small-h3">Breaking News!</h3>
           <p class="small-text">Donalt Trump re-elected! </p>
         </article>
       </a>
 
-      <a href="http://" target="_blank" rel="noopener noreferrer">
-        <article class="small-card">
-          <img src="../img/DT_2020.jpg" alt="">
+      <a href="http://" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
+        <article>
+          <img src="../img/" alt="">
           <h3 class="small-h3">Breaking News!</h3 class="small-h3">
           <p class="small-text">Donalt Trump re-elected! </p>
         </article>
       </a>
 
-      <a href="http://" target="_blank" rel="noopener noreferrer">
-        <article class="small-card">
-          <img src="../img/DT_2020.jpg" alt="">
+      <a href="http://" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
+        <article>
+          <img src="../img/" alt="">
           <h3 class="small-h3">Breaking News!</h3>
           <p class="small-text">Donalt Trump re-elected! </p>
         </article>
       </a>
 
-      <a href="http://" target="_blank" rel="noopener noreferrer">
-        <article class="small-card">
-          <img src="../img/DT_2020.jpg" alt="">
+      <a href="http://" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
+        <article>
+          <img src="../img/" alt="">
           <h3 class="small-h3">Breaking News!</h3>
           <p class="small-text">Donalt Trump re-elected! </p>
         </article>
