created new header navigation

--- a/code/index.html
+++ b/code/index.html
@@ -9,6 +9,48 @@
   </head>
   <body>
     
+    <header class="flex-container">
+      <!-- Header med flex-container class -->
+      <!-- UL med 7 st li med olika exlude beroende på device-->
+      <!-- link link img link link link link -->
+      <!-- MOBILE: bara img center -->
+      <!-- TABLET: link link IMG link link -->
+      <!-- DESKTOP: IMG link link link link -->
+      <ul>
+
+        <li class="nav-item exclude-mobile">
+          <a href="http://" target="_blank" rel="noopener noreferrer">link</a>
+        </li>
+
+        <li class="nav-item exclude-mobile">
+          <a href="http://" target="_blank" rel="noopener noreferrer">link</a>
+        </li>
+
+        <li class="nav-item">
+          <a href="http://" target="_blank" rel="noopener noreferrer">
+            <img src="../img/logo.svg" alt="">
+          </a>
+        </li>
+
+        <li class="nav-item exclude-mobile">
+          <a href="http://" target="_blank" rel="noopener noreferrer">link</a>
+        </li>
+
+        <li class="nav-item exclude-mobile">
+          <a href="http://" target="_blank" rel="noopener noreferrer">link</a>
+        </li>
+
+        <li class="nav-item exclude-mobile">
+          <a href="http://" target="_blank" rel="noopener noreferrer">link</a>
+        </li>
+
+        <li class="nav-item exclude-mobile">
+          <a href="http://" target="_blank" rel="noopener noreferrer">link</a>
+        </li>
+
+      </ul>
+
+    </header>
 
     <section class="flex-container">
       <!-- The big news content -->
@@ -29,7 +71,7 @@
       <!-- The other news  -->
       <a href="http://" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
         <article>
-          <img src="../img/" alt="">
+          <img src="../img/RM.jpeg" alt="">
           <h3 class="small-h3">You decide</h3>
           <p class="small-text">Family guy or simpsons? </p>
         </article>
@@ -37,7 +79,7 @@
 
       <a href="http://" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
         <article>
-          <img src="../img/" alt="">
+          <img src="../img/ernst.jpg" alt="">
           <h3 class="small-h3">Read it all!</h3>
           <p class="small-text">Ernst best wedding tips! </p>
         </article>
@@ -45,7 +87,7 @@
 
       <a href="http://" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
         <article>
-          <img src="../img/" alt="">
+          <img src="../img/DT_2020.jpg" alt="">
           <h3 class="small-h3">Breaking News!</h3>
           <p class="small-text">Donalt Trump re-elected! </p>
         </article>
@@ -53,7 +95,7 @@
 
       <a href="http://" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
         <article>
-          <img src="../img/" alt="">
+          <img src="../img/DT_2020.jpg" alt="">
           <h3 class="small-h3">Breaking News!</h3>
           <p class="small-text">Donalt Trump re-elected! </p>
         </article>
@@ -61,7 +103,7 @@
 
       <a href="http://" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
         <article>
-          <img src="../img/" alt="">
+          <img src="../img/DT_2020.jpg" alt="">
           <h3 class="small-h3">Breaking News!</h3>
           <p class="small-text">Donalt Trump re-elected! </p>
         </article>
@@ -69,7 +111,7 @@
 
       <a href="http://" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
         <article>
-          <img src="../img/" alt="">
+          <img src="../img/DT_2020.jpg" alt="">
           <h3 class="small-h3">Breaking News!</h3 class="small-h3">
           <p class="small-text">Donalt Trump re-elected! </p>
         </article>
@@ -77,7 +119,7 @@
 
       <a href="http://" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
         <article>
-          <img src="../img/" alt="">
+          <img src="../img/DT_2020.jpg" alt="">
           <h3 class="small-h3">Breaking News!</h3>
           <p class="small-text">Donalt Trump re-elected! </p>
         </article>
@@ -85,7 +127,7 @@
 
       <a href="http://" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
         <article>
-          <img src="../img/" alt="">
+          <img src="../img/DT_2020.jpg" alt="">
           <h3 class="small-h3">Breaking News!</h3>
           <p class="small-text">Donalt Trump re-elected! </p>
         </article>
@@ -93,7 +135,6 @@
     </section>
 
     <footer class="">
-      <!-- Anchor tag and link to get back up -->
       <!-- Team Elephants! -->
       <!-- Github, linkedin links? -->
       <a href="#top" class="footer-link">Back to top</a>
