--- a/code/index.html
+++ b/code/index.html
@@ -1,14 +1,31 @@
 <!DOCTYPE html>
 <html>
+
   <head>
+
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+
   </head>
+
   <body>
+
     <header>
-      <!-- Some kind of logo and navbar -->
+
+      <div class="site-name">
+      <img class="img-logo" src="small-logo.jpg" alt="company-logo">
+      <h2>Site name</h2>
+      </div>
+      
+      <div class="navbar">
+      <a href="" alt="link" target="_blank">Link</a>
+      <a href="" alt="link" target="_blank">Link</a>
+      <a href="" alt="link" target="_blank">Link</a>
+      <a href="" alt="link" target="_blank">Link</a>
+      </div>
+      <!-- logo and navbar -->
     </header>
 
     <section class="big-news">
@@ -18,5 +35,7 @@
     <section class="">
       <!-- The other news  -->
     </section>
+
   </body>
+
 </html>
