--- a/code/index.html
+++ b/code/index.html
@@ -36,37 +36,7 @@
     </nav>
   </header>
 
-  <main class="main-content">
-
-    <img
-      src="https://images.unsplash.com/photo-1579155373653-589af878c852?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=60"
-      alt="">
-    <img
-      src="https://images.unsplash.com/photo-1579154545541-1b3d6a0c1579?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=668&q=80"
-      alt="">
-    <img
-      src="https://images.unsplash.com/photo-1579155373653-589af878c852?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=60"
-      alt="">
-    <img
-      src="https://images.unsplash.com/photo-1579155373653-589af878c852?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=60"
-      alt="">
-    <img
-      src="https://images.unsplash.com/photo-1579155373653-589af878c852?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=60"
-      alt="">
-    <img
-      src="https://images.unsplash.com/photo-1579155373653-589af878c852?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=60"
-      alt="">
-    <img
-      src="https://images.unsplash.com/photo-1579155373653-589af878c852?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=60"
-      alt="">
-    <img
-      src="https://images.unsplash.com/photo-1579155373653-589af878c852?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=60"
-      alt="">
-
-
-  </main>
-
-  <footer class="footer">
+  <aside class="sidebar">
     <a href="https://www.facebook.com/">
       <img src="https://img.icons8.com/nolan/64/facebook-circled.png">
     </a>
@@ -76,6 +46,92 @@
     <a href="https://www.pinterest.com/">
       <img src="https://img.icons8.com/nolan/64/pinterest.png">
     </a>
+  </aside>
+
+  <main class="main-content">
+    <div class="small-news">
+      <img
+        src="https://images.unsplash.com/photo-1579155373653-589af878c852?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=60"
+        alt="">
+    </div>
+    <div class="small-news">
+      <img
+        src="https://images.unsplash.com/photo-1579154545541-1b3d6a0c1579?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=668&q=80"
+        alt="">
+    </div>
+    <div class="small-news">
+      <img
+        src="https://images.unsplash.com/photo-1579155373653-589af878c852?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=60"
+        alt="">
+    </div>
+    <div class="small-news">
+      <img
+        src="https://images.unsplash.com/photo-1579154545541-1b3d6a0c1579?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=668&q=80"
+        alt="">
+    </div>
+    <div class="small-news">
+      <img
+        src="https://images.unsplash.com/photo-1579155373653-589af878c852?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=60"
+        alt="">
+    </div>
+    <div class="small-news">
+      <img
+        src="https://images.unsplash.com/photo-1579154545541-1b3d6a0c1579?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=668&q=80"
+        alt="">
+    </div>
+    <div class="small-news">
+      <img
+        src="https://images.unsplash.com/photo-1579155373653-589af878c852?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=60"
+        alt="">
+    </div>
+    <div class="small-news">
+      <img
+        src="https://images.unsplash.com/photo-1579154545541-1b3d6a0c1579?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=668&q=80"
+        alt="">
+    </div>
+
+
+  </main>
+
+  <footer>
+    <div class="top-footer">
+      <div class="top-footer-headers">
+        <h2>Header 1</h2>
+        <ul>
+          <li><a href="url">Examples</a></li>
+          <li><a href="url">Examples</a></li>
+          <li><a href="url">Examples</a></li>
+        </ul>
+      </div>
+      <div class="top-footer-headers">
+        <h2>Header 2</h2>
+        <ul>
+          <li><a href="url">Examples</a></li>
+          <li><a href="url">Examples</a></li>
+          <li><a href="url">Examples</a></li>
+        </ul>
+      </div>
+      <div class="top-footer-headers">
+        <h2>Header 3</h2>
+        <ul>
+          <li><a href="url">Examples</a></li>
+          <li><a href="url">Examples</a></li>
+          <li><a href="url">Examples</a></li>
+        </ul>
+      </div>
+      <div class="top-footer-headers">
+        <h2>Header 4</h2>
+        <ul>
+          <li><a href="url">Examples</a></li>
+          <li><a href="url">Examples</a></li>
+          <li><a href="url">Examples</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="bottom-footer">
+      <p>&copy Nathalie Rautell</p>
+      <p>Privacy Policy and Cookies Policy</p>
+    </div>
   </footer>
 </body>
 
