--- a/code/index.html
+++ b/code/index.html
@@ -22,6 +22,7 @@
   </section>
   <button>click</button>
   <button>click here</button>
+  <p>Why does my terminal look different than Jennie's?</p>
 </body>
 
 </html>
