different styling and a sidebar

--- a/code/index.html
+++ b/code/index.html
@@ -12,127 +12,129 @@
 </head>
 
 <body>
+  <div class="sidebar-flex">
+    <aside class="sidebar">
+      <a href="https://www.facebook.com/">
+        <img src="https://img.icons8.com/nolan/64/facebook-circled.png">
+      </a>
+      <a href="https://twitter.com/">
+        <img src="https://img.icons8.com/nolan/64/twitter.png">
+      </a>
+      <a href="https://www.pinterest.com/">
+        <img src="https://img.icons8.com/nolan/64/pinterest.png">
+      </a>
+      <a href="#top">
+        <img src="https://img.icons8.com/nolan/64/double-up.png">
+      </a>
+    </aside>
+  </div>
 
-  <header>
+  <div class="body">
+    <header>
+      <h1><img src="globe.svg" style="margin-right: 15px;"><a href="url">GLO</a> news</h1>
+      <nav class="navbar">
+        <button data-hover="Back at it!">
+          <div>Home</div>
+        </button>
+        <button data-hover="Wiki Glo!">
+          <div>About</div>
+        </button>
+        <button data-hover="Dora!">
+          <div>Explore</div>
+        </button>
+        <button data-hover="Stay fab!">
+          <div>Trends</div>
+        </button>
+        <button data-hover="Wohoo!">
+          <div>Subscribe</div>
+        </button>
+      </nav>
+    </header>
 
-    <h1><img src="globe.svg" style="margin-right: 15px;"><a href="url">GLO</a> news</h1>
-
-    <nav class="navbar">
-      <button data-hover="Back at it!">
-        <div>Home</div>
-      </button>
-      <button data-hover="Wiki Glo!">
-        <div>About</div>
-      </button>
-      <button data-hover="Dora!">
-        <div>Explore</div>
-      </button>
-      <button data-hover="Stay fab!">
-        <div>Trends</div>
-      </button>
-      <button data-hover="Wohoo!">
-        <div>Subscribe</div>
-      </button>
-    </nav>
-  </header>
-
-  <aside class="sidebar">
-    <a href="https://www.facebook.com/">
-      <img src="https://img.icons8.com/nolan/64/facebook-circled.png">
-    </a>
-    <a href="https://twitter.com/">
-      <img src="https://img.icons8.com/nolan/64/twitter.png">
-    </a>
-    <a href="https://www.pinterest.com/">
-      <img src="https://img.icons8.com/nolan/64/pinterest.png">
-    </a>
-  </aside>
-
-  <main class="main-content">
-    <div class="small-news">
-      <img
-        src="https://images.unsplash.com/photo-1579155373653-589af878c852?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=60"
-        alt="">
-    </div>
-    <div class="small-news">
-      <img
-        src="https://images.unsplash.com/photo-1579154545541-1b3d6a0c1579?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=668&q=80"
-        alt="">
-    </div>
-    <div class="small-news">
-      <img
-        src="https://images.unsplash.com/photo-1579155373653-589af878c852?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=60"
-        alt="">
-    </div>
-    <div class="small-news">
-      <img
-        src="https://images.unsplash.com/photo-1579154545541-1b3d6a0c1579?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=668&q=80"
-        alt="">
-    </div>
-    <div class="small-news">
-      <img
-        src="https://images.unsplash.com/photo-1579155373653-589af878c852?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=60"
-        alt="">
-    </div>
-    <div class="small-news">
-      <img
-        src="https://images.unsplash.com/photo-1579154545541-1b3d6a0c1579?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=668&q=80"
-        alt="">
-    </div>
-    <div class="small-news">
-      <img
-        src="https://images.unsplash.com/photo-1579155373653-589af878c852?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=60"
-        alt="">
-    </div>
-    <div class="small-news">
-      <img
-        src="https://images.unsplash.com/photo-1579154545541-1b3d6a0c1579?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=668&q=80"
-        alt="">
-    </div>
-
-
-  </main>
-
-  <footer>
-    <div class="top-footer">
-      <div class="top-footer-headers">
-        <h2>Header 1</h2>
-        <ul>
-          <li><a href="url">Examples</a></li>
-          <li><a href="url">Examples</a></li>
-          <li><a href="url">Examples</a></li>
-        </ul>
+    <main class="main-content">
+      <div class="small-news">
+        <img
+          src="https://images.unsplash.com/photo-1579155373653-589af878c852?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=60"
+          alt="">
       </div>
-      <div class="top-footer-headers">
-        <h2>Header 2</h2>
-        <ul>
-          <li><a href="url">Examples</a></li>
-          <li><a href="url">Examples</a></li>
-          <li><a href="url">Examples</a></li>
-        </ul>
+      <div class="small-news">
+        <img
+          src="https://images.unsplash.com/photo-1579154545541-1b3d6a0c1579?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=668&q=80"
+          alt="">
       </div>
-      <div class="top-footer-headers">
-        <h2>Header 3</h2>
-        <ul>
-          <li><a href="url">Examples</a></li>
-          <li><a href="url">Examples</a></li>
-          <li><a href="url">Examples</a></li>
-        </ul>
+      <div class="small-news">
+        <img
+          src="https://images.unsplash.com/photo-1579155373653-589af878c852?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=60"
+          alt="">
       </div>
-      <div class="top-footer-headers">
-        <h2>Header 4</h2>
-        <ul>
-          <li><a href="url">Examples</a></li>
-          <li><a href="url">Examples</a></li>
-          <li><a href="url">Examples</a></li>
-        </ul>
+      <div class="small-news">
+        <img
+          src="https://images.unsplash.com/photo-1579154545541-1b3d6a0c1579?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=668&q=80"
+          alt="">
       </div>
-    </div>
-    <div class="bottom-footer">
-      <p>&copy Nathalie Rautell</p>
-      <p>Privacy Policy and Cookies Policy</p>
-    </div>
-  </footer>
+      <div class="small-news">
+        <img
+          src="https://images.unsplash.com/photo-1579155373653-589af878c852?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=60"
+          alt="">
+      </div>
+      <div class="small-news">
+        <img
+          src="https://images.unsplash.com/photo-1579154545541-1b3d6a0c1579?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=668&q=80"
+          alt="">
+      </div>
+      <div class="small-news">
+        <img
+          src="https://images.unsplash.com/photo-1579155373653-589af878c852?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=60"
+          alt="">
+      </div>
+      <div class="small-news">
+        <img
+          src="https://images.unsplash.com/photo-1579154545541-1b3d6a0c1579?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=668&q=80"
+          alt="">
+      </div>
+    </main>
+
+    <footer>
+      <div class="top-footer">
+        <div class="top-footer-headers">
+          <h2>Header 1</h2>
+          <ul>
+            <li><a href="url">Examples</a></li>
+            <li><a href="url">Examples</a></li>
+            <li><a href="url">Examples</a></li>
+          </ul>
+        </div>
+        <div class="top-footer-headers">
+          <h2>Header 2</h2>
+          <ul>
+            <li><a href="url">Examples</a></li>
+            <li><a href="url">Examples</a></li>
+            <li><a href="url">Examples</a></li>
+          </ul>
+        </div>
+        <div class="top-footer-headers">
+          <h2>Header 3</h2>
+          <ul>
+            <li><a href="url">Examples</a></li>
+            <li><a href="url">Examples</a></li>
+            <li><a href="url">Examples</a></li>
+          </ul>
+        </div>
+        <div class="top-footer-headers">
+          <h2>Header 4</h2>
+          <ul>
+            <li><a href="url">Examples</a></li>
+            <li><a href="url">Examples</a></li>
+            <li><a href="url">Examples</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="bottom-footer">
+        <p>&copy Nathalie Rautell</p>
+        <p>Privacy Policy and Cookies Policy</p>
+      </div>
+    </footer>
+  </div>
 </body>
 
 </html>
