started making responsive

--- a/code/index.html
+++ b/code/index.html
@@ -5,12 +5,14 @@
   <meta charset="utf-8" />
   <title>Project 2: The News Site</title>
   <link rel="stylesheet" href="./style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- dont forget the meta tag for responsiveness -->
   <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css?family=Alata&display=swap" rel="stylesheet">
 </head>
 
 <body>
+  
   <header>
     <h1>
       🐶 Doggos Today 🐶 <br>
@@ -19,11 +21,27 @@
 
   </header>
 
+
   <section class="big-news">
-    <!-- <h2>Most Popular Names of 2019</h2> -->
+    <img src="allan.jpg" alt="Allan">
+    <h2>Most Popular Names of 2019</h2>
+    <!-- <button>>>></button> -->
   </section>
 
-  <section class="">
+
+  <section class="flex-parent">
+
+    <div class="flex-cutest"><h3>Who's the Cutest of them All?</h3> 
+    <img src="corgipuppy.jpg" alt="Corgi"></div>
+
+    <div class="flex-puppies"><h3>Puppies! Puppies for Everyone!</h3> 
+    <img src="blackdog.jpg" alt="Doggo"></div>
+    
+    <div class="flex-doing"><h3>Doggos Doing Things</h3>
+    <img src="happydog.jpg" alt="Happy"></div>
+
+    <div class="flex-snow"><h3>Paws up - for snow</h3>
+    <img src="snowdoggo.jpg" alt="Snow"></div>
     <!-- The other news  -->
   </section>
 </body>
