--- a/code/index.html
+++ b/code/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  
+
   <header>
     <h1>
       🐶 Doggos Today 🐶 <br>
@@ -31,14 +31,15 @@
 
   <section class="flex-parent">
 
-    <div class="flex-cutest"><h3>Who's the Cutest of them All?</h3> 
-    <img src="corgipuppy.jpg" alt="Corgi"></div>
+    <div class="flex-cutest"><h3>Puppies for Preseident!</h3>
+    <img src="pupper.jpg" alt="Corgi"></div>
 
-    <div class="flex-puppies"><h3>Puppies! Puppies for Everyone!</h3> 
+    <div class="flex-puppies"><h3>Cutest of them All?</h3> 
     <img src="blackdog.jpg" alt="Doggo"></div>
     
     <div class="flex-doing"><h3>Doggos Doing Things</h3>
-    <img src="happydog.jpg" alt="Happy"></div>
+    <img src="doing.jpg" alt="Happy">
+    </div>
 
     <div class="flex-snow"><h3>Paws up - for snow</h3>
     <img src="snowdoggo.jpg" alt="Snow"></div>
