--- a/code/index.html
+++ b/code/index.html
@@ -12,30 +12,48 @@
 
   <body>
 
+    <div>
+
+      <img class="header-image" src="background-image.jpg" alt="header-image" >
+
+    </div>
+
     <header>
 
       <div class="site-name">
-      <img class="img-logo" src="small-logo.jpg" alt="company-logo">
-      <h2>Site name</h2>
+
+      <img src="hiclipart.com.png" class="img-logo" alt="company-logo"> 
+
+      <h1>Techtrends</h1>
+
       </div>
       
-      <div class="navbar">
-      <a href="" alt="link" target="_blank">Link</a>
-      <a href="" alt="link" target="_blank">Link</a>
-      <a href="" alt="link" target="_blank">Link</a>
-      <a href="" alt="link" target="_blank">Link</a>
+      <div class="desktop-menu-navbar">
+
+      <a class="link-desktop-navbar" href="" alt="link" target="_blank">News</a>  
+      <a class="link-desktop-navbar" href="" alt="link" target="_blank">Sports</a>
+      <a class="link-desktop-navbar" href="" alt="link" target="_blank">Culture</a>
+      <a class="link-desktop-navbar" href="" alt="link" target="_blank">Lifestyle</a>
+
       </div>
       <!-- logo and navbar -->
     </header>
 
     <section class="big-news">
-      <!-- The big news content -->
+      <img class="img-big-news" src="technigo-class-2020.PNG" alt="image-big-news" >
+      <p class="p-big-news"> The class of 2020 just finished their first project!</p>
     </section>
 
     <section class="">
       <!-- The other news  -->
     </section>
+    <footer>
+      
+      <a class="link-footer" href="https://facebook.com" alt="link-facebook" target="_blank"> <img src="fb_icon_325x325.png"></a>
+      <a class="link-footer" href="https://instagram.com" alt="link-instagram" target="_blank"> <img src="Instagram_AppIcon_Aug2017.png"></a>
+      <a class="link-footer" href="https://twitter.com" alt="link-twitter" target="_blank"> <img src="twitter.png"></a>
 
+    </footer>
   </body>
 
 </html>
