Updated content, styling and images

--- a/code/index.html
+++ b/code/index.html
@@ -1,200 +1,82 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Technigo Student News</title>
-  <link rel="stylesheet" href="./style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="style.css">
+  <title>Johanna Åstrand</title>
 </head>
 
 <body>
+
   <header>
+    <img src="logo.svg" alt="technigo-logo">
+    <nav>
+      <a href="#">PORTFOLIO</a>
+      <a href="#">BLOG</a>
+      <a href="#">CONTACT</a>
+    </nav>
     <div class="hamburger">
       <div></div>
       <div></div>
       <div></div>
     </div>
-    <img src="logo.svg" alt="technigoLogo">
-    <nav>
-      <a href="#">TOP NEWS1</a>
-      <a href="#">TOP NEWS2</a>
-      <a href="#">TOP NEWS3</a>
-    </nav>
-    <!-- Some kind of logo and navbar -->
   </header>
 
-  <section class="main-news">
+  <section class="main-news-container">
     <section class="container">
+      <img src="main-news-bg.jpeg" alt="nature-img">
       <div>
-        <h2>OMG, THIS IS WHAT I LEARNED!</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero fugit sed porro beatae consequatur illum
-          architecto.
-        </p>
+        <h2>LATEST 🔥</h2>
+        <h3>24 WEEKS TECHNIGO BOOTCAMP STARTS NOW! DO YOU WANT TO FOLLOW THE NEWS?</h3>
+        <button>Read more</button>
       </div>
-      <img src="omg.jpg" alt="omg image">
     </section>
   </section>
-  <section class="grid-news">
+
+
+  <section class="grid-news-container">
     <section class="container">
-      <h3>Lorem ipsum</h3>
-      <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-      </p>
-      <h3>Lorem ipsum</h3>
-      <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-      </p>
-      <section class="grid-news-boxes">
-        <a href="">
-          <div>
-            <figure class="circles">
-              <span></span>
-              <span></span>
-            </figure>
-            <p>THIS IS NEWS</p>
-            <h4>THIS AS WELL</h4>
-          </div>
-          <img src="nature.jpg" alt="natureImage">
-          <p>THIS IS ALSO NEWS</p>
+      <section class="news-cards">
+        <a href="#">
+          <img src="grid-news-bg.jpeg" alt="grid-img">
+          <h4>EVERY DAY CODING</h4>
+          <button>Read more</button>
+        </a>
+        <a href="#">
+          <img src="grid-news-bg.jpeg" alt="grid-img">
+          <h4>EVERY DAY CODING</h4>
+          <button>Read more</button>
+        </a>
+        <a href="#">
+          <img src="grid-news-bg.jpeg" alt="grid-img">
+          <h4>EVERY DAY CODING</h4>
+          <button>Read more</button>
+        </a>
+        <a href="#">
+          <img src="grid-news-bg.jpeg" alt="grid-img">
+          <h4>EVERY DAY CODING</h4>
+          <button>Read more</button>
+        </a>
+        <a href="#">
+          <img src="grid-news-bg.jpeg" alt="grid-img">
+          <h4>EVERY DAY CODING</h4>
+          <button>Read more</button>
+        </a>
+        <a href="#">
+          <img src="grid-news-bg.jpeg" alt="grid-img">
+          <h4>EVERY DAY CODING</h4>
+          <button>Read more</button>
         </a>
       </section>
     </section>
   </section>
-  <section class="grid-news">
-    <h3>Lorem ipsum</h3>
-    <p>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-    </p>
-    <h3>Lorem ipsum</h3>
-    <p>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-    </p>
-    <section class="grid-news-boxes">
-      <a href="">
-        <div>
-          <figure class="circles">
-            <span></span>
-            <span></span>
-          </figure>
-          <p>THIS IS NEWS</p>
-          <h4>THIS AS WELL</h4>
-        </div>
-        <img src="nature.jpg" alt="natureImage">
-        <p>THIS IS ALSO NEWS</p>
-      </a>
-    </section>
-  </section>
-  <section class="grid-news">
-    <h3>Lorem ipsum</h3>
-    <p>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-    </p>
-    <h3>Lorem ipsum</h3>
-    <p>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-    </p>
-    <section class="grid-news-boxes">
-      <a href="">
-        <div>
-          <figure class="circles">
-            <span></span>
-            <span></span>
-          </figure>
-          <p>THIS IS NEWS</p>
-          <h4>THIS AS WELL</h4>
-        </div>
-        <img src="nature.jpg" alt="natureImage">
-        <p>THIS IS ALSO NEWS</p>
-      </a>
-    </section>
-  </section>
-  <section class="grid-news">
-    <h3>Lorem ipsum</h3>
-    <p>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-    </p>
-    <h3>Lorem ipsum</h3>
-    <p>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-    </p>
-    <section class="grid-news-boxes">
-      <a href="">
-        <div>
-          <figure class="circles">
-            <span></span>
-            <span></span>
-          </figure>
-          <p>THIS IS NEWS</p>
-          <h4>THIS AS WELL</h4>
-        </div>
-        <img src="nature.jpg" alt="natureImage">
-        <p>THIS IS ALSO NEWS</p>
-      </a>
-    </section>
-  </section>
-  <section class="grid-news">
-    <h3>Lorem ipsum</h3>
-    <p>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-    </p>
-    <h3>Lorem ipsum</h3>
-    <p>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-    </p>
-    <section class="grid-news-boxes">
-      <a href="">
-        <div>
-          <figure class="circles">
-            <span></span>
-            <span></span>
-          </figure>
-          <p>THIS IS NEWS</p>
-          <h4>THIS AS WELL</h4>
-        </div>
-        <img src="nature.jpg" alt="natureImage">
-        <p>THIS IS ALSO NEWS</p>
-      </a>
-    </section>
-  </section>
-  <section class="grid-news">
-    <h3>Lorem ipsum</h3>
-    <p>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-    </p>
-    <h3>Lorem ipsum</h3>
-    <p>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-    </p>
-    <section class="grid-news-boxes">
-      <a href="">
-        <div>
-          <figure class="circles">
-            <span></span>
-            <span></span>
-          </figure>
-          <p>THIS IS NEWS</p>
-          <h4>THIS AS WELL</h4>
-        </div>
-        <img src="nature.jpg" alt="natureImage">
-        <p>THIS IS ALSO NEWS</p>
-      </a>
-    </section>
-  </section>
-  <footer></footer>
+
+  <footer>
+    <i class="fab fa-linkedin"></i>
+  </footer>
 </body>
 
 </html>
