reworked media query and fixed header navigation

--- a/code/index.html
+++ b/code/index.html
@@ -18,45 +18,45 @@
       <!-- DESKTOP: IMG link link link link -->
       <ul>
 
-        <li class="nav-item exclude-mobile">
-          <a href="http://" target="_blank" rel="noopener noreferrer">link</a>
+        <li class="nav-item exclude-mobile exclude-desktop">
+          <a href="http://" target="_blank" rel="noopener noreferrer">link 1</a>
         </li>
 
-        <li class="nav-item exclude-mobile">
-          <a href="http://" target="_blank" rel="noopener noreferrer">link</a>
+        <li class="nav-item exclude-mobile exclude-desktop">
+          <a href="http://" target="_blank" rel="noopener noreferrer">link 2</a>
         </li>
 
         <li class="nav-item">
           <a href="http://" target="_blank" rel="noopener noreferrer">
-            <img src="../img/logo.svg" alt="">
+            <img src="../img/clickbait.jpg" alt="">
           </a>
         </li>
 
         <li class="nav-item exclude-mobile">
-          <a href="http://" target="_blank" rel="noopener noreferrer">link</a>
+          <a href="http://" target="_blank" rel="noopener noreferrer">link 3</a>
         </li>
 
         <li class="nav-item exclude-mobile">
-          <a href="http://" target="_blank" rel="noopener noreferrer">link</a>
+          <a href="http://" target="_blank" rel="noopener noreferrer">link 4</a>
         </li>
 
-        <li class="nav-item exclude-mobile">
-          <a href="http://" target="_blank" rel="noopener noreferrer">link</a>
+        <li class="nav-item exclude-mobile exclude-tablet">
+          <a href="http://" target="_blank" rel="noopener noreferrer">link 5</a>
         </li>
 
-        <li class="nav-item exclude-mobile">
-          <a href="http://" target="_blank" rel="noopener noreferrer">link</a>
+        <li class="nav-item exclude-mobile exclude-tablet">
+          <a href="http://" target="_blank" rel="noopener noreferrer">link 6</a>
         </li>
 
       </ul>
 
     </header>
 
-    <section class="flex-container">
+    <section class="flex-container clearfix">
       <!-- The big news content -->
       <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" class="large-card" target="_blank" rel="noopener noreferrer">
         <article>
-          <img src="../img/" alt="">
+          <img src="../img/DT_2020.jpg" class="exclude-mobile" alt="">
           <h3 class="large-h3 class="small-h3"">Breaking News!</h3>
             <p class="large-text">Donalt Trump re-elected! <br>
           See his opening speach right hear
